...
    <string name="addItemHint">Enter product name</string>
    <string name="cross">Cross</string>
    <string name="product_name_hint">Enter a product name</string>
    <string name="product_picture">Product picture</string>
    <string name="save">Save</string>
    <string name="input_shopping_list_name">Input shopping list name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_product">New product</string>
    <string name="product_title">Product</string>
    <string name="edit">Edit</string>
    <string name="in_shop">In shop</string>
    <string name="delete_shopping_list_question">Delete shopping list?</string>
...
    <string name="estimate">Estimate app</string>
    <string name="pref_key_show_activity_opening_option_choice" translatable="false">pref_key_show_activity_opening_option_choice</string>
    <string name="pref_show_activity_opening_option_choice_summary">Show choose mode dialog after click on shopping list in main screen</string>
    <string name="pref_show_activity_opening_option_choice">Show choose mode dialog</string>
    <string name="action_deselect_all">Deselect all products</string>
    <string name="def_user_name">Not signed in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_profile">Profile</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="profile_progress_message">Signing in…</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_friends">Friends</string>
    <string name="input_friends_email">Input friend\'s e-mail</string>
    <string name="search_friend">Search friend</string>
    <string name="searching">Searching…</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="user_not_found" tools:ignore="UnusedResources">User has not been found by this e-mail</string>
    <string name="authentication">Authentication</string>
    <string name="friend_photo">Friend\'s photo</string>
    <string name="friends_no_data_text">Friends list is empty. Add new friends!</string>
    <string name="connection_timeout_exceeded">Connection timeout exceeded</string>
    <string name="send_to_friend">Send to friend</string>
    <string name="shopping_list_transfer_error">Shopping list transfer error</string>
    <string name="sending">Sending…</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="action_receive_shopping_lists">Receive shopping lists</string>
    <string name="no_shopping_for_loading">There are no shopping lists to download</string>
    <string name="receiving">Receiving…</string>
    <string name="received_new_shopping_lists">Received new shopping lists:</string>
    <string name="error_saving_user_data">Couldn\'t save user data:</string>
    <string name="log_in_suggestion">Log in, please</string>
    <string name="received_new_shopping_lists_summary">New shopping lists uploaded</string>
    <string name="from">from</string>
    <string name="action_black_list">Black list</string>
    <string name="action_black_list_no_data_text">Black list is empty</string>
    <string name="message_from_user_not_in_friends">User not from friends list sent you shopping list.</string>
    <string name="new_user_sent_list">New user %1$s! sent shopping list for you.</string>
    <string name="add_to_friends_and_receive_list">Receive</string>
    <string name="add_to_black_list_and_decline_list">Ignore</string>
    <string name="arrow" translatable="false">arrow</string>
    <string name="invitation_title">Thanks for recommendations!</string>
    <string name="invitation_message">Get "Just buying"!</string>
    <string name="invitation_call_to_action_text">Download to phone</string>
    <string name="invite_friends">Invite friends</string>
    <string name="market_app_link" translatable="false">market://details?id=com.RightDirection.ShoppingList</string>
    <string name="wrong_email_dialog_question">This user is not registered yet. Should I send him an invitation?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="friend_invitation_question">This application is an electronic shopping list JustBuying. Download and register ;)</string>
    <string name="pref_key_sort_shopping_lists_in_reverse_order" translatable="false">pref_key_sort_shopping_lists_in_reverse_order</string>
    <string name="pref_sort_shopping_lists_in_reverse_order">Shopping lists sort order</string>
    <string name="pref_key_sort_shopping_lists_in_reverse_order_summary">New shopping list will be added to the beginning</string>
    <string name="show_product_image">Show product image</string>
    <string name="clear_product_image">Clear product image</string>
    <string name="product_image_activity_title">Image of %1$s</string>
...
