<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:title="@string/send_to_friend"
        android:id="@+id/action_send_to_friend"
        android:icon="@drawable/ic_send"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_edit_shopping_list"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item android:id="@+id/imgDelete"
        android:icon="@drawable/ic_remove_list"
        android:title="@string/delete"
        android:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />
    <item android:id="@+id/action_load_list"
        android:icon="@drawable/ic_load"
        android:title="@string/load"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/action_change_list_name"
        android:icon="@drawable/ic_rename"
        android:title="@string/change_list_name"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />
</menu>