...
                android:id="@+id/sign_in_ui"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <Button
                    android:id="@+id/launch_sign_in"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/google_sign_in" />
            </RelativeLayout>
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sign_out_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_out" />
            </LinearLayout>
        </RelativeLayout>
...
